@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 11-02-2006 added: my files, settings, xlink kai to startup window settings to match xboxmediacenter.xml
  - 10-02-2006 fixed: dvdnav discontinuites wheren't being logged correctly
  - 10-02-2006 fixed: potential bug in sharedsection handling
  - 10-02-2006 fixed: music nav, the error message for a empty database was not shown
